0.83.3
  - MOUNT command can now mount a drive to the UNC
    root path in the form \\ComputerName\SharedFolder
    on Windows systems (Wengier)
  - Improved the HX-DOS build package to make it fully
    automated: all required HX DOS Extender files will
    be included in the package, and dosbox-x.exe can
    now be run directly in a real DOS system without
    external requirements. (Wengier)
  - Fixed incorrect frame rate reported by 3Dfx Voodoo
    emulation (rderooy, backported from DOSBox SVN).
  - Added the "Boot from disk image" menu item (A:, C:,
    and D: drives only) in the "Drive" menu to boot the
    specified disk image directly in Windows. (Wengier)
  - Support for converting mouse wheel movements into
    keyboard presses like arrow keys, configurable by
    the option "mouse_wheel_key" (default is 0 which
    disables this feature). When set to 1, mouse wheel
    movements are converted to up/down arrows. Setting
    it to 2 or 3 converts such movements to left/right
    arrows or PageUp/PageDn keys respectively. (Wengier)
  - Support for reloading the keyboard mapper file with
    the config -set command. (Wengier)
  - IMGMOUNT command without parameters will show disk
    names for drive-number only mounts. (Wengier)
  - IMGMOUNT can now autodetect DOS <= 3.21 harddisk
    geometry with MFM sector images (rderooy & Wengier)
  - IMGMOUNT -fs none fixed to use same geometry detect
    function that FAT filesystem mounting uses.
  - Added suppprt for mounting overlay drives using MOUNT
    command with "-t overlay" option. Backported from
    DOSBox SVN and adopted for DOSBox-X with additional
    features such as long filename and PC-98 support, it
    allows the users to redirect new and changed file(s)
    to a different location transparently. (Wengier)
  - Cleaned up the DPI awareness auto-detection code to
    allow Visual Studio builds to again run on Windows 7.
    Meanwhile, MinGW builds (either SDL1 or SDL2 version)